--- a/Bulky.Models/Bulky.Models.csproj
+++ b/Bulky.Models/Bulky.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bulky.Utility\Bulky.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
